turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:23: error: Non-zero integral values may not have a leading zero.
for(i<-1 to 10 000)
               ^LangtonsAnt:23: error: ')' expected but something found.
for(i<-1 to 10 000)
               ^LangtonsAnt:34: error: illegal start of simple expression
}
^